[gd_scene load_steps=2 format=3 uid="uid://dju7l6dwiuyl0"]

[ext_resource type="Script" path="res://scenes/ui/unit_info_panel.gd" id="1_5dgx5"]

[node name="UnitInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 418.0
offset_right = -820.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5dgx5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -224.0
offset_right = 329.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "UNIT NAME"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "##"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Stats" type="Label" parent="Panel/VBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Stats"
horizontal_alignment = 1

[node name="StatHealth" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Health - "

[node name="Value" type="Label" parent="Panel/VBoxContainer/VBoxContainer/StatHealth"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 65.0
offset_top = -13.0
offset_right = 128.0
offset_bottom = 13.0
grow_vertical = 2
text = "## / ##"

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="StatAttack" type="Label" parent="Panel/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Attack - "

[node name="Value" type="Label" parent="Panel/VBoxContainer/VBoxContainer/GridContainer/StatAttack"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -13.0
offset_right = 66.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "##"

[node name="StatDefense" type="Label" parent="Panel/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Defense - "

[node name="Value" type="Label" parent="Panel/VBoxContainer/VBoxContainer/GridContainer/StatDefense"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -13.0
offset_right = 66.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "##"

[node name="StatMovement" type="Label" parent="Panel/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Move - "

[node name="Value" type="Label" parent="Panel/VBoxContainer/VBoxContainer/GridContainer/StatMovement"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -13.0
offset_right = 66.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "##"

[node name="StatRange" type="Label" parent="Panel/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Range - "

[node name="Value" type="Label" parent="Panel/VBoxContainer/VBoxContainer/GridContainer/StatRange"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -13.0
offset_right = 66.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "##"

[node name="StatExp" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Exp - "

[node name="Value" type="Label" parent="Panel/VBoxContainer/VBoxContainer/StatExp"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 65.0
offset_top = -13.0
offset_right = 128.0
offset_bottom = 13.0
grow_vertical = 2
text = "## / ##"
